# LLMcourse

./: .gitignore  Qleverfile  README.md  compose.yaml  pyproject.toml
app/: fast_api_w6_main.py  information_retrieval.py  llm.py  lookup.py  main.py  names.py  pdf.py  pipeline.py  sentiment.py  sparql.py  text_to_query.py  wikidata.py
dockerfiles/: api.Dockerfile  api_pdf.Dockerfile  api_sentiment.Dockerfile
frontend/: text-to-persons-ui.py
tests/: test_api.py  test_api_pdf_to_sentence.py  test_api_sentiment.py  test_llm.py  test_lookup.py  test_pipeline.py  test_sparql.py  test_text_to_query.py
